--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formidable": "^3.5.2",
     "js-sha256": "^0.11.0",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.0.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
