--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.1",
     "formidable": "^3.5.2",
     "js-sha256": "^0.11.0",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.3",
     "ws": "^8.18.0"
@@ -34,6 +36,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.15",
+    "@types/speakeasy": "^2.0.10",
     "@types/ws": "^8.5.13",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
