--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/formidable": "^3.4.5",
     "cookie-parser": "^1.4.7",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "formidable": "^3.5.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.15",
     "@types/speakeasy": "^2.0.10",
